--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -47,6 +47,18 @@
   border-radius: 4px 0 0 4px;
 }
 
+.heroes a {
+  color: #888;
+  text-decoration: none;
+  position: relative;
+  display: block;
+  width: 250px;
+}
+
+.heroes a:hover {
+  color:#607D8B;
+}
+
 /* HeroesComponent's private CSS styles
 
 .heroes .badge {
